# Starfish-BIE

./: .gitignore  IP1632.mat  compu_lapl.m  fill_starfish.m  filled_plot.m  main_solve.m  mex_do_force_quad.cpp  mex_do_force_quad.mexa64  pdc_TODO.tex  specquad_lapl.m
report/: report.aux  (+4 more)
src/: .gitignore  CMakeLists.txt  do_spec_quad.m  error_estL.m  fill_starfish.m  fill_starfish2.m  gaussleg.m  laplreaddata.c  main_init.m  main_solve.m  mex_saraspecquad.mexa64  mex_saraspecquad.mexmaci64  normquadu_high.mat  quadraturelapl.c  readData.c  rel_plot_av.m  solveBIE_starfish.m  solveLapl.c  specialquadlapl.c  specquad.c  specquadu_high.mat  test  test.m
src/cmake/: FindMatlab.cmake  MatlabTestsRedirect.cmake
src/matlab/: comprhs_stokes.m  compu_stokes.m  error_estL_stokes.m  interfhigh_line.mat  interflow_line.mat  interfsuperhigh_line.mat  laplace_esterror.m  laplace_solveBIE.m  laplace_trap.m  main_init.m  mubie_gmres.m  mubie_stokes.m  solveBIE_starfish.m  solveBIE_stokes.m  specquad_lapl.m  specquad_stokes.m  stokes_errorest.m  stokes_solveBIE.m  tmp.mat  tmptest.m  vandernewton.m  writeDataToFile.m
src/matlab/errorest/: figline.fig
src/matlab/mex/: Complex.h  my_mexmake.m
src/matlab/misc/: domainplot.m  mubie_stokes.m
src/matlab/results/: domain_180212.fig  est_absallt_interp_180212.fig  est_absallt_maxnorm_180212.fig  specerr_small_180212.fig  standarderr_small_180212.fig
src/mex/: CMakeLists.txt  mex_FMM.h  mex_do_force_quad.mexa64  mex_saraspecquad.cpp  mex_saraspecquad.mexa64  mex_saraspecquad.mexmaci64  mexsaraspec2.cpp  mm_mxmalloc.h  my_mexmake.m
(+78 files in other folders)
